[package]
name = "hybrid-cache-rs"
version = "0.1.0"
edition = "2021"
description = "hybrid-cache-rs is a library that combines in-memory and distributed caching to provide optimal access to data"
license = "MIT"
repository = "https://github.com/pavozayac/hybrid-cache-rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bon = "3.8.1"
futures = "0.3.31"
moka = { version = "0.12.11", features = ["future"] }
redis_rs = "0.9.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }


[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }  # optional, might cause more false positives

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# Define custom opt outs here
# ...
